force-app/main/default/objects/B25__Sync_Error__c/B25__Sync_Error__c.object-meta.xml
<CustomObject>
    <label>Sync Error</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Sync Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>