force-app/main/default/objects/B25__Sync_Error__c/fields/B25__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>B25__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>