force-app/main/default/objects/B25__Sync_Error__c/fields/B25__Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Operation_Type__c</fullName>
    <description>The type of operation the error occurred for.</description>
    <inlineHelpText>Le type d’opération pour lequel l’erreur s’est produite.</inlineHelpText>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connection Setup</fullName>
            </value>
            <value>
                <fullName>Subscription Update</fullName>
            </value>
            <value>
                <fullName>Sync Down</fullName>
            </value>
            <value>
                <fullName>Subscription Refresh</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Recurring Event Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>