force-app/main/default/objects/B25__Sync_Error__c/fields/B25__Stage__c.field-meta.xml
<CustomField>
    <fullName>B25__Stage__c</fullName>
    <description>Name of the stage of the operation the error occurred for.</description>
    <inlineHelpText>Nom de l’étape de l’opération pour laquelle l’erreur s’est produite.</inlineHelpText>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>