force-app/main/default/objects/B25__Sync_Error__c/fields/B25__Status_Code__c.field-meta.xml
<CustomField>
    <fullName>B25__Status_Code__c</fullName>
    <description>For HTTP errors, this contains the status code returned by the server.</description>
    <inlineHelpText>Pour les erreurs HTTP, ceci contient le code de statut renvoyé par le serveur.</inlineHelpText>
    <label>Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>