force-app/main/default/objects/B25__Sync_Error__c/fields/B25__Sync_Connection__c.field-meta.xml
<CustomField>
    <fullName>B25__Sync_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sync connection the error occurred for.</description>
    <inlineHelpText>La connexion de synchronisation pour laquelle l’erreur s’est produite.</inlineHelpText>
    <label>Sync Connection</label>
    <referenceTo>B25__Sync_Connection__c</referenceTo>
    <relationshipLabel>Sync Errors</relationshipLabel>
    <relationshipName>Sync_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>