force-app/main/default/objects/B25__Sync_Error__c/listViews/B25__All.listView-meta.xml
<ListView>
    <fullName>B25__All</fullName>
    <columns>NAME</columns>
    <columns>B25__Operation_Type__c</columns>
    <columns>B25__Stage__c</columns>
    <columns>B25__Status_Code__c</columns>
    <columns>B25__Error_Message__c</columns>
    <columns>B25__Sync_Connection__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>